--- a/app/src/main/res/layout/query_dialog.xml
+++ b/app/src/main/res/layout/query_dialog.xml
@@ -44,6 +44,7 @@
         <DatePicker
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:calendarViewShown="false"
             android:id="@+id/from"/>
         <TextView 
             android:layout_width="wrap_content"
@@ -53,6 +54,7 @@
         <DatePicker
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:calendarViewShown="false"
             android:id="@+id/to"/>
         <TextView 
             android:layout_width="wrap_content"
